Kaiden Commit for Website Changes

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@{
+    Layout = "_Layout";
     ViewData["Title"] = "Home Page";
 }
 
@@ -14,6 +15,6 @@
     {
         <h1 class="display-4">Welcome to Adventure Logger!</h1>
         <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <a asp-controller="Home" asp-action="Login" class="btn btn-link">Login</a>
+        
     }
 </div>
