--- a/Views/Shared/login.cshtml
+++ b/Views/Shared/login.cshtml
@@ -1,4 +1,7 @@
 <!-- Views/Home/Login.cshtml -->
+@using AdventureLoggerBackend.Models
+
+@model AdventureLoggerBackend.Models.LoginViewModel
 
 @{
     ViewData["Title"] = "Login";
@@ -10,13 +13,16 @@
         <form asp-action="Login" method="post">
             <div class="form-group">
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" class="form-control" required />
+                <input type="text" id="username" name="Username" class="form-control" required />
             </div>
             <div class="form-group">
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" class="form-control" required />
+                <input type="password" id="password" name="Password" class="form-control" required />
             </div>
             <button type="submit" class="btn btn-primary mt-2">Login</button>
         </form>
+    </div>
+    <div class="mt-3">
+        <p>Don't have an account? <a href="@Url.Action("Index", "SignUp")">Sign up</a> now!</p>
     </div>
 </div>
